# kpop-site

./: .gitignore  DESIGN.md  en.html  index.html  styles.css  경북대학교_장성진_2860.txt  대학교_성명_핸드폰뒷4자리.txt
.github/workflows/: verify.yml
css/: style.css
js/: main.js  script.js
laboratory/mouse/: .env.example  .gitignore  AGENTS.md  README.md  design.md  final_mouse_colony_prd.md  index.html  mouse_open_source_research_adoption_ko.md  mouse_strain_colony_system_design_ko.md  mousedb_cli_first_review_ko.md  mousedb_open_design_artifact_workflow_review_ko.md  mvp_acceptance_matrix_ko.md  mvp_vertical_slice_plan.md  open_source_acceleration_candidates_ko.md  open_source_acceleration_doublecheck_ko.md  package-lock.json  package.json  photo_e2e_validation_plan_ko.md  pvm_photo_evidence_ledger_adoption_ko.md  reference_adoption_notes.md  requirements.txt  review_burden_reduction_plan_ko.md  review_burden_reduction_progress_ko.md  roi_card_extraction_plan_ko.md  selective_normalization_controls_plan_ko.md  start.bat  ui_image_usage_improvement_plan_ko.md  ui_reference_comparison_plan_ko.md  wet_lab_operational_review_ko.md
laboratory/mouse/app/: __init__.py  breeding_rules.py  db.py  hybrid_note_line_evaluator.py  labeling_rules.py  main.py  matching.py  storage.py
laboratory/mouse/config/: breeding_rules.json  copied_photo_pilot_readiness_manifest.example.json  photo_e2e_validation_cases.json  roi_presets.json  (+1 more)
laboratory/mouse/src-tauri/: Cargo.toml  tauri.conf.json
laboratory/mouse/src-tauri/capabilities/: default.json
laboratory/mouse/src-tauri/src/: main.rs
(+154 files in other folders)
